--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
 # Environment Variables Template
 # Copy this file to .env and fill in your actual values
 
-# Google AI Studio API Key
-# Get yours from: https://aistudio.google.com/api-keys
 GEMINI_API_KEY=your_api_key_here
 
-# Optional: Hugging Face API Key (for image generation)
-# Get yours from: https://huggingface.co/settings/tokens
+STABLE_HORDE_API_KEY=your_stable_horde_key_here
+
 HUGGINGFACE_API_KEY=your_huggingface_token_here
